# SOFA-magnetic-simulation

./: .gitignore  .gitmodules  OPTIMIZATION_SUMMARY.md  README.md  SAFE_MODE_OPTIMIZATION.md  SAFE_MODE_PROPULSION_FIX.md  __init__.py  build_plugin.bat  config.py  controller.py  diagnose_elasticrod.py  evaluate_rl.py  geometry.py  main.py  math_utils.py  rl_env.py  runtime.py  scene.py  sofa_builders.py  train_rl.py
assets/: option.txt  vessel_final_4_0108_runtime_info.json
assets/centerline/: edge_lower_nav_path.npy  main_nav_path.npy  nav_path.npy  vessel_centerline_3.npy  vessel_centerline_4_0108.npy  vessel_centerline_4_0108_aligned.npy  vessel_centerline_4_0108_alignment.json  vessel_centerline_transformed.npy  vessel_centerline_world.npy
assets/centerline/extracted_paths/: manifest.json  route_catalog.json  selected_route.json
assets/centerline/extracted_paths/branches/: branch_seg0.npy  branch_seg11.npy  branch_seg13.npy  branch_seg15.npy  branch_seg2.npy  branch_seg20.npy  branch_seg23.npy  branch_seg25.npy  branch_seg27.npy  branch_seg29.npy  branch_seg31.npy  branch_seg4.npy  branch_seg6.npy  branch_seg8.npy
docs/: sofa_simulation_technical_overview_zh.md
guidewire_scene/: ADVANCEMENT_FIX.md
native/ElasticRodGuidewire/: CMakeLists.txt  README.md
native/ElasticRodGuidewire/include/ElasticRodGuidewire/: ElasticRodCollisionMapping.h  ElasticRodCompatCore.h  ElasticRodGuidewireModel.h  ElasticRodGuidewireParameters.h  ElasticRodLumpedMass.h  ElasticRodRigidStateAdapter.h  ElasticRodTypes.h  ExternalMagneticForceField.h  config.h
native/ElasticRodGuidewire/src/: ElasticRodCollisionMapping.cpp  ElasticRodCompatCore.cpp  ElasticRodCore.cpp  ElasticRodGuidewireModel.cpp  ElasticRodLumpedMass.cpp  ElasticRodRigidStateAdapter.cpp  ExternalMagneticForceField.cpp  initElasticRodGuidewire.cpp
references/: elasticRod.cpp  elasticRod.h  externalMagneticForce.cpp  externalMagneticForce.h  guidewire_magnetic_control.py
tools/: prepare_vessel_4_0108.py
(+185 files in other folders)
